Trailhead/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Asia_Macro_Monthly_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asia Macro Monthly - Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Allocation_View_Quarterly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Allocation View - Quarterly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Authorized Document</description>
        <inlineHelpText>WAMCRM : Authorized Document</inlineHelpText>
        <label>Other Legal Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday_MM_DD__c</fullName>
        <description>Support WAM Birthday field</description>
        <inlineHelpText>Enter birthday in (MM/DD/YYYY). 
E.g. 12/23/1988
Year is optional. 
E.g. 12/23</inlineHelpText>
        <label>Birthdate (MM/DD)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_Pack_PowerPoint_Quarterly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Custom field</description>
        <label>Chart Pack PowerPoint - Quarterly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chart_of_the_Month_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Custom field</description>
        <label>Chart of the Month - Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Corporate Action</description>
        <inlineHelpText>WAMCRM : Corporate Action</inlineHelpText>
        <label>Corporate Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_related_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate-related Notices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Custom field</description>
        <label>Event Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Performance_Flash_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Custom field</description>
        <label>Fund Performance Flash - Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Intelligence_Report_Quarterly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Custom field</description>
        <label>Global Intelligence Report - Quarterly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment_Note_Ad_Hoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Note - Ad Hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Leaflet_Brochure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Leaflet/Brochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Branch Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Branch RMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - District Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Holder_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WAMCRM : Share Holder Notices</description>
        <inlineHelpText>WAMCRM : Share Holder Notices</inlineHelpText>
        <label>Share Holder Notices</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>WAM_Distributor</fullName>
        <active>true</active>
        <description>Record type for WAM CRM Distributors</description>
        <label>WAM Distributor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>